# web_shop

./: .gitignore  Makefile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 70770e033855_initial_migration.py
app/: database.py  main.py  models.py  schemas.py
app/routers/: categories.py  products.py  users.py
src/: app.py  endpoints.py
src/products/: list.py  router.py
src/users/: list.py
tests/: tests.py
tests/routers/: test_categories.py  test_products.py  test_users.py
