[tool.poetry]
name = "web-shop"
version = "0.1.0"
description = ""
authors = ["stas-home <stasijanka13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
wheel = "^0.41.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
